package grpc_server

import (
	"context"
	"fmt"
	"log"
	"net"

	"gitlab.com/godevs2/micro/internal/inventory/domain/model"
	inventoryV1 "gitlab.com/godevs2/micro/shared/pkg/proto/inventory/v1"
	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"
)

type Server struct {
	server   *grpc.Server
	grpcPort string
	inventoryV1.UnimplementedInventoryServiceServer
	inventoryService InventoryProcessor
}

type InventoryProcessor interface {
	Get(ctx context.Context, req *model.GetPartRequest) (*model.GetPartResponse, error)
	ListParts(ctx context.Context, req *model.ListPartsRequest) (*model.ListPartsResponse, error)
}

func NewServer(grpcPort string, inventoryHandler InventoryProcessor) *Server {

	// –°–æ–∑–¥–∞–Ω–∏–µ gRPC —Å–µ—Ä–≤–µ—Ä–∞ —Å –∏–Ω—Ç–µ—Ä—Å–µ–ø—Ç–æ—Ä–∞–º–∏
	server := grpc.NewServer(
		grpc.ChainUnaryInterceptor(
			LoggerInterceptor(),
		),
	)
	// –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è —Å–µ—Ä–≤–∏—Å–æ–≤

	s := &Server{
		server:           server,
		grpcPort:         grpcPort,
		inventoryService: inventoryHandler,
	}
	inventoryV1.RegisterInventoryServiceServer(server, s)
	reflection.Register(server)

	return s
}

func (s *Server) Start() error {
	// –°–æ–∑–¥–∞–µ–º listener –¥–ª—è gRPC —Å–µ—Ä–≤–µ—Ä–∞
	lis, err := net.Listen("tcp", net.JoinHostPort("localhost", s.grpcPort))
	if err != nil {
		return fmt.Errorf("failed to listen: %v", err)
	}

	log.Printf("üöÄ gRPC server listening on %s\n", s.grpcPort)
	return s.server.Serve(lis)
}

func (s *Server) Shutdown(ctx context.Context) error {
	if s.server != nil {
		log.Println("üõë –û—Å—Ç–∞–Ω–æ–≤–∫–∞ gRPC —Å–µ—Ä–≤–µ—Ä–∞...")

		// –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä
		stopped := make(chan struct{})
		go func() {
			s.server.GracefulStop()
			close(stopped)
		}()

		// –û–∂–∏–¥–∞–µ–º –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ –∏–ª–∏ —Ç–∞–π–º–∞—É—Ç–∞
		select {
		case <-stopped:
			log.Println("‚úÖ gRPC —Å–µ—Ä–≤–µ—Ä –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")
		case <-ctx.Done():
			log.Println("‚ö†Ô∏è  –¢–∞–π–º–∞—É—Ç graceful shutdown, –ø—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–∞—è –æ—Å—Ç–∞–Ω–æ–≤–∫–∞")
			s.server.Stop()
		}
	}
	return nil
}

func LoggerInterceptor() grpc.UnaryServerInterceptor {
	return func(ctx context.Context, req interface{}, info *grpc.UnaryServerInfo, handler grpc.UnaryHandler) (interface{}, error) {
		// –õ–æ–≥–∏—Ä—É–µ–º –≤—Ö–æ–¥—è—â–∏–π –∑–∞–ø—Ä–æ—Å
		log.Printf("‚û°Ô∏è  gRPC call: %s", info.FullMethod)

		// –í—ã–∑—ã–≤–∞–µ–º —Å–ª–µ–¥—É—é—â–∏–π –æ–±—Ä–∞–±–æ—Ç—á–∏–∫
		resp, err := handler(ctx, req)

		// –õ–æ–≥–∏—Ä—É–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç
		if err != nil {
			log.Printf("‚ùå gRPC errors: %s - %v", info.FullMethod, err)
		} else {
			log.Printf("‚úÖ gRPC success: %s", info.FullMethod)
		}

		return resp, err
	}
}
